[gd_scene load_steps=12 format=3 uid="uid://d1khxpsmx5430"]

[ext_resource type="Script" path="res://scripts/enemy_boss.gd" id="1_u8oti"]
[ext_resource type="Texture2D" uid="uid://qokqxbc5uxds" path="res://assets/sprites/enemy_boss-sheet.png" id="2_cyb7h"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="3_ooei5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2eebd"]
atlas = ExtResource("2_cyb7h")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8yx2"]
atlas = ExtResource("2_cyb7h")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec8ry"]
atlas = ExtResource("2_cyb7h")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwt2n"]
atlas = ExtResource("2_cyb7h")
region = Rect2(144, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0qcpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eebd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8yx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec8ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwt2n")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feq2d"]
size = Vector2(134, 168)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4l2k"]
bg_color = Color(0.168627, 0.0431373, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqoct"]
bg_color = Color(0.72549, 1, 0.784314, 1)

[node name="Enemy Boss" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_u8oti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_0qcpc")
animation = &"run"
autoplay = "run"
frame_progress = 0.397276

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5)
shape = SubResource("RectangleShape2D_feq2d")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -62.0
offset_right = 22.0
offset_bottom = -57.0
theme_override_styles/background = SubResource("StyleBoxFlat_w4l2k")
theme_override_styles/fill = SubResource("StyleBoxFlat_fqoct")
value = 50.0
show_percentage = false
script = ExtResource("3_ooei5")

[node name="InmuneTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="InmuneCD" type="Timer" parent="."]
wait_time = 7.5
one_shot = true
autostart = true

[connection signal="timeout" from="InmuneTimer" to="." method="_on_inmune_timer_timeout"]
[connection signal="timeout" from="InmuneCD" to="." method="_on_inmune_cd_timeout"]
